[gd_scene load_steps=15 format=2]

[ext_resource path="res://tscn/BluePlayer.tscn" type="PackedScene" id=1]
[ext_resource path="res://tscn/YellowPlayer.tscn" type="PackedScene" id=2]
[ext_resource path="res://tscn/gamewall.tscn" type="PackedScene" id=3]
[ext_resource path="res://tscn/Camera2D.tscn" type="PackedScene" id=4]
[ext_resource path="res://tscn/BlueGoal.tscn" type="PackedScene" id=5]
[ext_resource path="res://tscn/BlueBox.tscn" type="PackedScene" id=6]
[ext_resource path="res://tscn/YellowGoal.tscn" type="PackedScene" id=7]
[ext_resource path="res://tscn/YellowBox.tscn" type="PackedScene" id=8]
[ext_resource path="res://scripts/Game.gd" type="Script" id=9]
[ext_resource path="res://tscn/Labels.tscn" type="PackedScene" id=10]
[ext_resource path="res://scripts/Box.gd" type="Script" id=11]
[ext_resource path="res://tscn/ConfirmationDialog.tscn" type="PackedScene" id=12]
[ext_resource path="res://tscn/AcceptDialog.tscn" type="PackedScene" id=13]
[ext_resource path="res://tscn/PauseDialog.tscn" type="PackedScene" id=14]

[node name="Blank Level" type="Node2D"]
script = ExtResource( 9 )
next_level = "res://levels/BlankLevel.tscn"
song = "res://assets/tklevel1.ogg"

[node name="Players" type="Node" parent="."]

[node name="BluePlayer" parent="Players" instance=ExtResource( 1 )]
position = Vector2( 128, 64 )

[node name="YellowPlayer" parent="Players" instance=ExtResource( 2 )]
position = Vector2( 160, 64 )

[node name="Camera2D" parent="." instance=ExtResource( 4 )]

[node name="Walls" type="Node" parent="."]

[node name="Wall" parent="Walls" instance=ExtResource( 3 )]
position = Vector2( 208, 64 )

[node name="Boxes" type="Node" parent="."]

[node name="BlueBox" parent="Boxes" instance=ExtResource( 6 )]
position = Vector2( 128, 96 )

[node name="YellowBox" parent="Boxes" instance=ExtResource( 8 )]
position = Vector2( 224, 96 )
script = ExtResource( 11 )

[node name="Goals" type="Node" parent="."]

[node name="BlueGoal" parent="Goals" instance=ExtResource( 5 )]
position = Vector2( 160, 96 )

[node name="YellowGoal" parent="Goals" instance=ExtResource( 7 )]
position = Vector2( 192, 96 )

[node name="AcceptDialog" parent="." instance=ExtResource( 13 )]

[node name="ConfirmationDialog" parent="." instance=ExtResource( 12 )]

[node name="Labels" parent="." instance=ExtResource( 10 )]

[node name="PauseDialog" parent="." instance=ExtResource( 14 )]
[connection signal="confirmed" from="AcceptDialog" to="." method="_on_AcceptDialog_confirmed"]
[connection signal="confirmed" from="PauseDialog" to="." method="_on_PauseDialog_confirmed"]
[connection signal="custom_action" from="PauseDialog" to="." method="_on_PauseDialog_custom_action"]
